<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_activity_padding"
    tools:context=".ConfirmarDatos">

    <TextView
        android:id="@+id/tv_confirmar_datos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_confirmar_datos_text"
        android:textStyle="bold"
        android:textSize="@dimen/tv_confirmar_datos_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_nombre_text"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_confirmar_datos"
        tools:text="Nombre:" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/empty_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@+id/tv_nombre"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/tv_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_nombre"
        app:layout_constraintTop_toTopOf="@+id/tv_nombre" />

    <TextView
        android:id="@+id/tv_fecha_nacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:enabled="true"
        android:text="@string/tv_fecha_nacimiento_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/et_fecha_nacimiento"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_fecha_nacimiento" />

    <EditText
        android:id="@+id/et_fecha_nacimiento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/empty_hint"
        android:importantForAutofill="no"
        android:inputType="date"
        android:labelFor="@+id/tv_fecha_nacimiento"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_fecha_nacimiento"
        app:layout_constraintTop_toBottomOf="@+id/et_nombre" />

    <EditText
        android:id="@+id/et_telefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/empty_hint"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:labelFor="@+id/tv_telefono"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_telefono"
        app:layout_constraintTop_toBottomOf="@+id/et_fecha_nacimiento" />

    <TextView
        android:id="@+id/tv_telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:hint="@string/empty_hint"
        android:text="@string/tv_telefono_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/et_telefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_telefono" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/tv_email_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_telefono" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/empty_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:labelFor="@+id/tv_email"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_email"
        app:layout_constraintTop_toBottomOf="@+id/et_telefono" />

    <TextView
        android:id="@+id/tv_descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:text="@string/tv_descripcion_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/et_descripcion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_descripcion" />

    <EditText
        android:id="@+id/et_descripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:enabled="false"
        android:gravity="start|top"
        android:hint="@string/empty_hint"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:labelFor="@+id/tv_descripcion"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_descripcion"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <Button
        android:id="@+id/btn_editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_editar_padding"
        android:text="@string/btn_editar_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="editarAction"
        app:layout_constraintTop_toBottomOf="@+id/et_descripcion" />

</androidx.constraintlayout.widget.ConstraintLayout>